--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
-[build]
+build]
   publish = "."
   functions = "netlify/functions"
+  edge_functions = "netlify/edge-functions"
 
 [functions]
   node_bundler = "esbuild"
@@ -14,3 +15,8 @@
 
 [functions."parse-card"]
   timeout = 30
+
+[[edge_functions]]
+  path = "/api/generate-nda-stream"
+  function = "generate-nda-stream"
+  
